kubernetes/apps/longhorn-system/longhorn/app/envoy-securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: longhorn-ui-oidc
  namespace: longhorn-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: longhorn-frontend
  oidc:
    provider:
      issuer: "https://authentik.${SECRET_DOMAIN}/application/o/longhorn"
      authorizationEndpoint: https://authentik.ciliumvalley.com/application/o/authorize/
      tokenEndpoint: https://authentik.ciliumvalley.com/application/o/token/
      endSessionEndpoint: https://authentik.ciliumvalley.com/application/o/longhorn/end-session/
    clientID: "longhorn-envoy"
    clientSecret:
      name: authentik-longhorn-oidc
    redirectURL: "https://longhorn.${SECRET_DOMAIN}/oauth2/callback"
    logoutPath: "/oauth2/logout"
    scopes:
      - openid
      - profile
      - email
